--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -18,43 +18,43 @@
 }
 
 /* Add button focus on hover */ 
-button:hover {
-    font-size: 47px;
+.submit-buttons:hover {
+    font-size: 42px;
     transition: font-size 0.2s;
 }
 
 .searchbar {
-    z-index: 1;
-    position: absolute;
-    top: 60%;
-    left: 30%;
     width: 55%;
-    height: 6.6%;
+    height: 8.6%;
     background-color: white;
-    /* border: 1px solid grey; */
     filter: drop-shadow(3px 5px 4px grey);
     border-radius: 50px;
-    padding: 1%;
 }
 
 .search-input-text {
     border: none;
     height: 100%;
-    width: 87%;
-    font-size: 35px;
-    /* float: left; */
-    padding-left: 25px;
+    width: 100%;
+    font-size: 30px;
+    float: left;
+    margin-left: 25px;
     background-color: none;
     margin-top: 15px;
 }
 
-.submit-button {
+.submit-buttons {
     height: 50px;
     width: 7%;
-    font-size: 35px;
+    font-size: 30px;
     border: none;
     background-color: rgba(0,0,0,0);
-    padding: 0;
-    margin: -5px;
+    margin-top: 12px;
+    margin-right: 10px;
     color: grey;
+    float: right;
+}
+
+.form-label {
+    width: 87%;
+    float: left;
 }
