--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   src: local('ReemKufi'), url(assets/fonts/ReemKufi-Regular.ttf) format('truetype');
 }
 
+@font-face {
+  font-family: 'Limelight';
+  src: local('Limelight'), url(assets/fonts/Limelight-Regular.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
