--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,7 +1,7 @@
 .coblima-header {
-    color: #6C63FF;
-    font-family: FiraSans;
-    position: absolute;
-    top: 3%;
-    left: 40px;
-  }
+  color: #6c63ff;
+  font-family: ReemKufi;
+  position: absolute;
+  top: 3%;
+  left: 40px;
+}
