--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -1,12 +1,10 @@
-
-
 .App {
   text-align: center;
 }
 
 .home-image {
-  height: 95%;
-  position: absolute;
+  /* height: 95%; */
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -18,16 +16,28 @@
   left: 30%;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row-reverse;
+  position: fixed;
+  height: 125px;
+  width: 100%;
+  top: 0;
+  align-items: center;
+  right: 20px;
+}
+
 .form-button {
-  position: absolute;
-  top: 3%;
-  width: 8%;
+  display: flex;
+  flex-direction: row;
+  font-family: ReemKufi;
+  margin: 0px 10px;
 }
 
 .login-button {
-  right: 13%;
+  display: flex;
 }
 
 .register-button {
-  right: 4%;
+  display: flex;
 }
