refactored searchbar code to enable positioning from parent class, added status username

--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -26,7 +26,7 @@ button:focus {
   transition: transform 0.1s;
 }
 
-.searchbar {
+.searchbar-container {
   display: flex;
   align-items: center;
   width: 55%;
