--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -98,3 +98,11 @@
   left: 30%;
 }
 
+.toggle-show-review-button {
+  background-color: rgba(0,0,0,0);
+  border: 1px solid rgba(0,0,0,0);
+  border: 1px solid rgba(0,0,0,1);
+  padding: 0;
+  margin: 0;
+
+}
