--- a/src/components/inputbar/inputbar.css
+++ b/src/components/inputbar/inputbar.css
@@ -20,14 +20,15 @@ button:focus {
   outline: none;
 }
 
-
 .input-bar {
+  display: flex;
   width: 90%;
   height: 60px;
   background-color: white;
   filter: drop-shadow(3px 5px 4px grey);
-  border-radius: 50px;
+  border-radius: 15px;
   margin-bottom: 5%;
+  font-family: Roboto;
 }
 
 .input-text {
@@ -37,9 +38,5 @@ button:focus {
   float: left;
   margin-left: 25px;
   background-color: none;
-  margin-top: 4%;
+  font-family: Roboto;
 }
-
-
-
-
