--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -44,11 +44,24 @@
   color: black;
 }
 
+.course-header-bot {
+  display: flex;
+  align-items: center;
+}
+
 .course-header-code {
   display: flex;
   font-family: ReemKufi;
   font-size: 2.5em;
   color: black;
+  margin-right: 30px;
+}
+
+.course-header-button {
+  display: flex;
+  font-family: ReemKufi;
+  font-weight: 550;
+  font-size: 24px;
 }
 
 .course-header-right {
