--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -59,9 +59,13 @@
 
 .course-header-button {
   display: flex;
+  background-color: #8580dd;
   font-family: ReemKufi;
   font-weight: 550;
-  font-size: 24px;
+  font-size: 28px;
+  width: 280px;
+  justify-content: center;
+  padding: 0px 0px;
 }
 
 .course-header-right {
