--- a/src/components/inactivetile/inactivetile.css
+++ b/src/components/inactivetile/inactivetile.css
@@ -11,6 +11,10 @@
   padding: 10px 20px;
 }
 
+.inactive-course-header-tile:hover {
+  cursor: pointer;
+}
+
 .inactive-course-header-tile-icon {
   display: flex;
   margin-top: 10px;
@@ -20,7 +24,7 @@
   display: flex;
   font-family: Roboto;
   font-size: 1.5em;
-  color: #9E9E9E;
+  color: #9e9e9e;
   justify-content: center;
 }
 
@@ -28,7 +32,7 @@
   display: flex;
   font-family: Roboto;
   font-size: 12px;
-  color: #9E9E9E;
+  color: #9e9e9e;
   opacity: 0.7;
   margin-top: -2.5px;
   justify-content: center;
