--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -23,10 +23,14 @@
   display: flex;
   flex-direction: row;
   position: fixed;
-  top: 140px;
-  height: 150px;
+  /* top: 150px; */
+  /* padding-top: 20px; */
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  /* height: 170px; */
   width: 100%;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
   background-color: #ffffff;
 }
 
@@ -77,7 +81,7 @@
 .course-body {
   display: flex;
   position: relative;
-  top: 290px;
+  top: 310px;
   height: 100%;
   padding: 50px 0px;
 }
