--- a/src/components/status/status.css
+++ b/src/components/status/status.css
@@ -1,16 +1,35 @@
 .status-container {
-    position: absolute;
-    top: 40px;
-    right: 110px;
+  position: absolute;
+  top: 40px;
+  right: 110px;
 }
 
 .status-name {
-    float: left;
-    margin-right: 15px;
-    color: #777;
-    font-family: ReemKufi;
+  float: left;
+  margin-right: 10px;
+  color: #777;
+  font-family: ReemKufi;
 }
 
 .status-arrow {
-    padding-top: 10px;
+  padding-top: 10px;
+}
+
+.status-button {
+  border: none;
+  background-color: #fff;
+  width: 100%;
+  text-align: left;
+  border-radius: 3px;
+}
+
+.status-button:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.status-button-text {
+  color: #777777;
+  margin: 0px;
+  z-index: 100;
 }
