--- a/src/routes/profile/profile.css
+++ b/src/routes/profile/profile.css
@@ -17,7 +17,7 @@
   width: 45%;
   position: absolute;
   right: 0;
-  background-color: rgb(108,98,255);
+  background-color: rgba(108, 99, 255, 0.6);
   text-align: center;
 }
 
@@ -72,7 +72,6 @@
   margin: 0 auto;
   margin-top: 17px;
   background-color: white;
-  font-style: italic;
   height: 47px;
   width: 80%;
   color: rgba(108, 99, 255, 0.6);
@@ -80,6 +79,7 @@
   border-radius: 50px;
   filter: drop-shadow(1px 3px 5px black);
   transition: all 0.9s;
+  font-size: 1.2em;
 }
 
 .active-action-button {
