--- a/src/routes/profile/profile.css
+++ b/src/routes/profile/profile.css
@@ -1,8 +1,11 @@
 .profile-container {
+  position: absolute;
   width: 100%;
   margin: 0 auto;
   padding: 0;
   margin: 0;
+  overflow: hidden;
+  height: 100%;
 }
 
 .profile-left-column {
@@ -32,7 +35,7 @@
   width: 60%;
   height: 100%;
   position: absolute;
-  top: 10%;
+  top: 5%;
   left: 20%;
 }
 
@@ -48,6 +51,7 @@
   font-size: 2.2em;
   color: white;
   text-align: center;
+  margin: 0px;
 }
 
 .profile-paragraph {
@@ -64,8 +68,8 @@
   margin-left: auto;
   margin-right: auto;
   width: 30%;
-  margin-top: 20px;
-  margin-bottom: 14px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .action-button {
@@ -83,7 +87,7 @@
 }
 
 .active-action-button {
-  background-color: rgb(57,55,77);
+  background-color: rgb(57, 55, 77);
   color: white;
 }
 
