--- a/src/components/historycard/historycard.css
+++ b/src/components/historycard/historycard.css
@@ -60,7 +60,6 @@
 
 .dual-link-buttons {
   display: flex;
-
 }
 
 .dual-button {
@@ -72,9 +71,14 @@
   border: none;
   border-radius: 10px;
   filter: drop-shadow(3px 6px 3px grey);
-  padding: 0px 20px 0px 20px;  
+  text-align: center;
   margin-left: 20px;
   cursor: pointer;
+}
+
+.dual-button:hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
 }
 
 .edit-button {
@@ -84,5 +88,3 @@
 .delete-button {
   background-color: rgba(255, 0, 0, 0.6);
 }
-
-
