--- a/src/routes/profile/profile.css
+++ b/src/routes/profile/profile.css
@@ -86,6 +86,10 @@
   font-size: 1.2em;
 }
 
+.action-button:hover {
+  background-color: lightgrey;
+}
+
 .active-action-button {
   background-color: rgb(57, 55, 77);
   color: white;
@@ -98,7 +102,6 @@
 
 .hide-review-history-button {
   opacity: 0;
-  height: 0;
   padding: 0;
-  margin: 0;
+  margin: 5px;
 }
