--- a/src/components/reviewcard/reviewcard.css
+++ b/src/components/reviewcard/reviewcard.css
@@ -1,7 +1,7 @@
 .review-total {
   display: flex;
-  width: 1500px;
-  height: 290px;
+  width: 100%;
+  /* height: 290px; */
 }
 
 .review-avatar {
@@ -22,7 +22,7 @@
   margin-top: 10px;
   font-family: ReemKufi;
   font-weight: 300;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 /* .review-avatar-course {
@@ -35,7 +35,7 @@
 .review-card {
   display: flex;
   flex-direction: column;
-  width: 1200px;
+  width: 100%;
   height: 270px;
   background-color: #fafafa;
   margin: 10px 20px;
@@ -52,7 +52,7 @@
 .review-card-top-title {
   display: flex;
   font-family: ReemKufi;
-  font-size: 48px;
+  font-size: 42px;
   font-weight: 400;
   color: #6c63ff;
 }
@@ -70,7 +70,7 @@
 .review-card-mid-content {
   display: flex;
   font-family: ReemKufi;
-  font-size: 24px;
+  font-size: 22px;
   color: #000000;
   text-align: justify;
 }
