--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -127,9 +127,11 @@
   margin: 0;
 }
 
-.course-body-review {
+.course-final-body-review {
   height: 100%;
-  width: 100%;
+  width: 90%;
+  margin-top: 10px;
+  margin-left: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
