--- a/src/routes/course/course.css
+++ b/src/routes/course/course.css
@@ -26,21 +26,19 @@ html {
   z-index: 2;
   display: flex;
   flex-direction: row;
+  align-content: space-between;
   position: fixed;
-  /* top: 150px; */
-  /* padding-top: 20px; */
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-  /* height: 170px; */
+  top: 140px;
+  height: 150px;
   width: 100%;
-  /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
 
 .course-header-left {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 60%;
   padding-left: 100px;
 }
 
@@ -49,6 +47,8 @@ html {
   font-family: Limelight;
   font-size: 2.3em;
   color: black;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .course-header-bot {
@@ -78,7 +78,7 @@ html {
 .course-header-right {
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 40%;
 }
 
 .course-body {
